[package]
name = "skyrender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomicwrites = "0.4.0"
blackbody = "0.0.0"
bytemuck = "1.13.1"
clap = { version = "4.2.1", features = ["derive"] }
dirs = "5.0.0"
flate2 = "1.0.25"
image = "0.24.6"
rayon = "1.7.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
